[build-system]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "lockout"
author = "Wilmer Arbelo"
author-email = "wilmer.arbelogonzalez@ucsf.edu"
home-page = "https://github.com/warbelo/Lockout"
description-file = "README.md"
requires = [
    "flit_core >=2,<4", 
    "scikit-learn", "tqdm", "pandas", "matplotlib", "numpy", 
]

